feat: add some documentation routes
