# src/modules/accounts/useCases/createUser/CreateUserController.ts
@@ -5,14 +5,15 @@ import { CreateUserUseCase } from './CreateUserUseCase';
 
 class CreateUserController {
   async handle (request: Request, response: Response): Promise<Response> {
-    const { name, email, password, driver_license } = request.body;
+    const { name, email, password, driver_license, username } = request.body;
     const createUserUseCase = container.resolve(CreateUserUseCase);
 
     await createUserUseCase.execute({
       name,
       password,
       email,
-      driver_license
+      driver_license,
+      username
     });
 
     return response.status(201).send();
