# src/swagger.json
@@ -16,6 +16,9 @@
 				],
 				"summary": "Create a Category",
 				"description": "Create a new category",
+				"security":[
+					{"bearerAuth": []}
+				],
 				"requestBody": {
 					"content": {
 						"application/json": {
@@ -93,6 +96,9 @@
 				],
 				"summary": "Upload new categories",
 				"description": "Upload new categories using a csv file",
+				"security":[
+					{"bearerAuth": []}
+				],
 				"requestBody": {
 					"content": {
 						"multipart/form-data": {
@@ -125,6 +131,9 @@
 				],
 				"summary": "Create a Specification",
 				"description": "Create a new Specification",
+				"security":[
+					{"bearerAuth": []}
+				],
 				"requestBody": {
 					"content": {
 						"application/json": {
@@ -138,7 +147,7 @@
 					"201": {
 						"description": "Specification has been created successfully"
 					},
-					"500": {
+					"400": {
 						"description": "Specification already exists"
 					}
 				}
@@ -194,6 +203,101 @@
 					}
 				}
 			}
+		},
+		"/session": {
+			"post": {
+				"tags": ["Session"],
+				"summary": "Authentication user",
+				"description": "Autentication user",
+				"requestBody": {
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#definitions/Session"
+							}
+						}
+					}
+				},
+				"responses": {
+					"201": {
+						"description": "Success"
+					},
+					"400": {
+						"description": "Email or password incorrect"
+					}
+				}
+			}
+		},
+		"/cars": {
+			"post": {
+				"tags": ["Cars"],
+				"summary": "Create a new car",
+				"description": "Create a new car",
+				"security":[
+					{"bearerAuth": []}
+				],
+				"requestBody": {
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/definitions/Car"
+							}
+						}
+					}
+				},
+				"responses": {
+					"201": {
+						"description": "Sucess"
+					},
+					"400": {
+						"description": "Car already exists"
+					}
+				}
+			}
+		},
+		"/cars/images/{id}": {
+			"post": {
+				"tags": ["Cars"],
+				"summary": "Upload images",
+				"description": "Upload imagens",
+				"security": [
+					{"bearerAuth": []}
+				],
+				"parameters": [
+					{
+						"name": "id",
+						"in": "path",
+						"description": "Car id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody":{
+					"content":{
+						"multipart/form-data": {
+							"schema": {
+								"type": "object",
+								"properties": {
+									"images": {
+										"type": "array",
+										"items": {
+											"type": "string",
+											"format":"binary"
+										}
+									}
+								}
+							}
+						}
+					}
+				},
+				"responses": {
+					"201": {
+						"description": "Created"
+					}
+				}	
+			}
 		}
 	},
 	"definitions": {
@@ -217,6 +321,52 @@
 				"description": {
 					"type": "string"
 				}
+			}
+		},
+		"Session": {
+			"type": "object",
+			"properties": {
+				"email": {
+					"type": "string"
+				},
+				"password": {
+					"type": "string"
+				}
+			}
+		},
+		"Car":{
+			"type":"object",
+			"properties": {
+				"name": {
+					"type": "string"
+				},
+				"description": {
+					"type":"string"
+				},
+				"daily_rate": {
+					"type": "number"
+				},
+				"licence_plate": {
+					"type": "string"
+				},
+				"fine_amount": {
+					"type": "number"
+				},
+				"brand": {
+					"type": "string"
+				},
+				"category_id": {
+					"type": "string"
+				}
+			}
+		}
+	},
+	"components": {
+		"securitySchemes": {
+			"bearerAuth": {
+				"type": "http",
+				"scheme": "bearer",
+				"bearerFormat": "JWT"
 			}
 		}
 	}
